# cosmic-station

./: .gitignore  .gitmodules  LICENSE.md  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: Jvm.cpp  bios_jni.cpp  driver_glvk_chk.cpp  drivers_glvk_jni.cpp  emu_user.cpp  jvm.cpp  jvm_comm.cpp  kernels_jni.cpp
app/src/main/cpp/addons/: compile_this.cpp
app/src/main/cpp/cosmic/cdvd/: cd_header.cpp  cd_header.h
app/src/main/cpp/cosmic/common/: alias.h  app.cpp  app.h  asm_c++out.h  except.cpp  except.h  global.h  logger.cpp  logger.h  types.h
app/src/main/cpp/cosmic/console/: backdoor.cpp  backdoor.h  bios_loader.cpp  bios_loader.h  emu_thread.cpp  emu_thread.h  emu_vm.cpp  emu_vm.h  intc.cpp  intc.h  sched_logical.cpp  sched_logical.h  virt_devices.cpp  virt_devices.h
app/src/main/cpp/cosmic/cpu/: cyclic32.cpp  cyclic32.h  verify_features.cpp  verify_features.h
app/src/main/cpp/cosmic/creeper/: addons_fpu.cpp  cached_blocks.cpp  cached_blocks.h  dispatch_functions.cpp  fastmem.cpp  fastmem.h  float_vectorization.cpp  inst_operands.cpp  inst_operands.h  int_lower1.cpp  iop_interpreter.cpp  iv_cop.cpp  iv_math.cpp  iv_special.cpp  mips_codes.cpp  mips_cop.cpp  mips_fpu.cpp  more_mips.cpp  psx_ep1.cpp  psx_interpreter.cpp  psx_interpreter.h  translate_opcodes.cpp  vector_codes.cpp  vector_codes.h  vector_float_vectorization.cpp  vector_int_lower1.cpp  vum_code.cpp
app/src/main/cpp/cosmic/ee/: cop0.cpp  cop0.h  cop1_fu.cpp  cop1_fu.h  cop_cache.cpp  cop_dma.cpp  cop_misc.cpp  ee_assembler.h  ee_core.cpp  ee_core.h  ee_info.h  ee_intc.cpp  ee_intc.h  ee_plus.cpp  ee_timers.cpp  ee_timers.h
app/src/main/cpp/cosmic/eeiv/: ee_assembler.h  ee_engine.cpp  ee_engine.h  ee_flow.cpp  ee_flow.h  ee_fuji.h  ee_info.h  ee_iov0.cpp  ee_plus.cpp
app/src/main/cpp/cosmic/engine/: cop0.cpp  cop0.h  cop1_fu.cpp  cop1_fu.h  cop_cache.cpp  cop_dma.cpp  cop_misc.cpp  ee_assembler.h  ee_core.cpp  ee_core.h  ee_flow.cpp  ee_flow.h  ee_info.h  ee_intc.cpp  ee_intc.h  ee_plus.cpp  ee_timers.cpp  ee_timers.h
app/src/main/cpp/cosmic/fishron/: emitter_common.cpp  emitter_common.h  jitter_arm64_ee.cpp  jitter_arm64_ee.h
app/src/main/cpp/cosmic/fs/: bios_loader.cpp  bios_loader.h
app/src/main/cpp/cosmic/fuji/: cop_isa.cpp  fuji_common.h  fuji_ops.cpp  fuji_ops.h  iop_interpreter.cpp  iop_interpreter.h  mipsiv_cached.cpp  mipsiv_full_interpreter.cpp  mipsiv_interpreter.h  mipsiv_isa.cpp  mipsiv_math.cpp  mipsiv_opcodes.cpp
app/src/main/cpp/cosmic/gamedb/: title_patches.cpp  title_patches.h
app/src/main/cpp/cosmic/gpu/: exhibition_engine.cpp  exhibition_engine.h  functions.h  graphics_layer.cpp  graphics_layer.h  hw_render.cpp  hw_render.h  render_driver.cpp  render_driver.h  renders.h
app/src/main/cpp/cosmic/gs/: gif_bridge.cpp  gif_bridge.h  gif_mandatory.cpp  gif_mandatory.h  gif_packed.cpp  gif_queuev8.cpp  gs_engine.cpp  gs_engine.h  gs_tables.cpp  gs_tables.h  synth_engine.cpp  synth_engine.h  synth_tables.cpp  synth_tables.h  transfer_queue.S  transfer_queue.cpp  transfer_queue.s
app/src/main/cpp/cosmic/hle/: bios_class.cpp  bios_class.h  bios_info.cpp  bios_info.h  bios_patch.cpp  bios_patch.h  group_mgr.cpp  group_mgr.h  syscall_gate.cpp  syscall_gate.h
app/src/main/cpp/cosmic/input/: memcard.cpp  memcard.h  sio2_io.cpp
app/src/main/cpp/cosmic/iop/: iop_cop.cpp  iop_cop.h  iop_core.cpp  iop_core.h  iop_dma.cpp  iop_dma.h  iop_fuji.h  iop_info.h  iop_intc.cpp  iop_intc.h  iop_timers.cpp  iop_timers.h
app/src/main/cpp/cosmic/ipu/: chrome_table.cpp  chrome_table.h  data_matrix.h  decoder_fifo.cpp  decoder_fifo.h  ipu_core.cpp  ipu_core.h
app/src/main/cpp/cosmic/java/: device_handler.cpp  device_handler.h  env.h  jclasses.cpp  jclasses.h
app/src/main/cpp/cosmic/mahiro/: emitter_common.cpp  emitter_common.h  jitter_arm64.h  jitter_arm64_ee.cpp
app/src/main/cpp/cosmic/mio/: bios_memory.h  blocks.cpp  blocks.h  dma_ctrl.cpp  dma_ctrl.h  dma_move.cpp  dma_parallel.cpp  dma_parallel.h  iop_memory.h  main_memory.h  mem_pipe.cpp  mem_pipe.h  mmu_tlb.cpp  mmu_tlb.h  tlb_mapper.cpp
app/src/main/cpp/cosmic/os/: env.h  jclasses.cpp  jclasses.h  mapped.h  neon_simd.h  system_state.cpp  system_state.h
app/src/main/cpp/cosmic/pshook/: hk_psx.cpp  hk_psx.h  installer.cpp  installer.h  psx_native.c  psx_native.cpp
app/src/main/cpp/cosmic/rearm/: emitter_common.cpp  emitter_common.h
app/src/main/cpp/cosmic/snd/: stream_buffer.cpp  stream_buffer.h
app/src/main/cpp/cosmic/spu/: sound_core.cpp  sound_core.h  sound_processor.cpp  sound_processor.h
app/src/main/cpp/cosmic/tokyo/: arm64_jitter.h  emitter_common.cpp  emitter_common.h  jitter_arm64.h  jitter_arm64_ee.cpp
app/src/main/cpp/cosmic/tokyo3/: tokyo3_arm64_jitter.h
app/src/main/cpp/cosmic/translator/: fastmem.cpp  fastmem.h  inst_operands.cpp  inst_operands.h
app/src/main/cpp/cosmic/usb/: dev_ir.cpp  dev_ir.h
app/src/main/cpp/oblivion/: vm.h
app/src/main/cpp/zenith/: App.cpp  App.h  ImplTypes.h  PaperLog.cpp  PaperLog.h  app.cpp  app.h  app_global.h  basic_types.h  except.h  global.h  impl_types.h  impltypes.h  logger.cpp  logger.h  mumu.h  paper_assert.h  paper_log.cpp  paper_log.h  paper_logger.cpp  paper_logger.h  readable_log.cpp  readable_log.h  types.h  verify.h
app/src/main/res/drawable/: button_round_add_24.xml  button_round_games_24.xml  button_round_save_24.xml  button_round_settings_24.xml  button_round_snippet_folder_24.xml  topbar_settings_24.xml
app/src/main/res/layout/: about_dialog.xml  activity_main.xml  app_toolbar.xml  bios_activity.xml  bios_item.xml  driver_activity.xml  driver_item.xml  emulation_activity.xml  games_folder_fragment.xml  kernel_activity.xml  kernel_item.xml  main_activity.xml  settings_activity.xml
app/src/main/res/menu/: main_menu.xml  topbar.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: app_preferences.xml  global_settings.xml  graphics_settings.xml  settings.xml
(+386 files in other folders)
